--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ a:active { outline: none; }
 
 p, dl, hr, h1, h2, h3,
 ol, ul, dd, pre, table, fieldset {
-	margin-bottom: 20px;
+	margin-bottom: 1px;
 }
 
 /* Headings */
@@ -218,7 +218,7 @@ pre {
 	border-width: 2px 0 2px 0;
 	border-radius: 5px;
 	color: #fff;
-	padding: 20px;
+	padding: 0px;
 	white-space: pre; white-space: pre-wrap; word-wrap: break-word;
 	/*position: relative;*/
 	/*text-shadow: 0px 1px 0px #333;*/
@@ -284,12 +284,12 @@ table {
 	/* th */
 	tr th,
 	thead th {
-		background: #f3f9fc;
+		
 		border-left: 1px solid #e9f2f7;
 		color: #444;
 		font-size: 15px;
 		font-weight: bold;
-		padding: 9px 24px;
+		padding: 1px 1px;
 		-webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, .04);
 		-moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, .04);
 		box-shadow: inset 0 0 10px rgba(0, 0, 0, .04);
@@ -297,19 +297,19 @@ table {
 
 	/* td */
 	tr td {
-		background: #fafafa;
+		
 		border: 1px solid #e7e7e7;
-		padding: 6px 24px;
+		padding: 1px 1px;
 	}
 	
 	td { vertical-align: top; }
 	
 	tr:nth-child(2n) td {
-		background: #f7f7f7;
+		
 	}
 	
 	tr:hover td {
-		background: #fff;
+		
 	}
 	
 	td, td img { vertical-align: top; }
@@ -318,7 +318,8 @@ table {
 	tfoot td {
 		color: #777;
 		font-size: 11px;
-		text-transform: uppercase;	
+		text-transform: uppercase;
+		align : center;
 	}
 	
 	tfoot th {
@@ -332,8 +333,8 @@ table {
 		background: #ffffee;
 		border: 1px solid #ffffc6;
 		font-size: 16px;
-		margin-bottom: 5px;
-		padding: 10px;
+		margin-bottom: 0px;
+		padding: 1px;
 		border-radius: 5px;
 	}
 
@@ -356,8 +357,9 @@ hr {
 	border: 0;
 	border-top: 1px solid #ccc;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.6);
-	margin: 20px 0;
-	padding: 0;
+	margin: 0px 0;
+	padding-top:5px;
+	padding-bottom:5px;
 }
 
 /* These selection declarations have to be separate
@@ -370,7 +372,7 @@ hr {
  */
 
 #header {
-	padding: 60px 20px 60px;
+	padding: 10px 10px 10px;
 }
 
 #site-title a {
@@ -400,7 +402,7 @@ hr {
 }
 
 #site-description {
-	font: normal 18px 'Droid Serif', sans-serif;
+	font: normal 16px 'Droid Serif', sans-serif;
 	float: right;
 	padding-top: 32px;
 }
@@ -408,12 +410,34 @@ hr {
 /**
  * Content
  */
- 
+#chatitem,#chatinit {
+  visibility:hidden;
+  position:absolute;
+  top:50%;
+  left : 50%;
+  height:1px;
+  widows:1px;
+  
+}
+#status {
+	background : white;
+	border-radius: 5px 5px 10px 10px;
+	width: 900px;
+	height:450px;
+	padding: 5px 5px 5px 5px;
+	-webkit-box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.4), 0px 0px 15px rgba(204, 204, 204, 0.5);
+	-moz-box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.4), 0px 0px 15px rgba(204, 204, 204, 0.5);
+	box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.4), 0px 0px 15px rgba(204, 204, 204, 0.5);
+  }
+#statusbar {
+  background : white;
+  font:white;
+  } 
 #main { 
 	background: rgba(204, 204, 204, .4);
 	border-radius: 5px 5px 10px 10px;
 	width: 960px;
-	padding: 50px 20px 50px 20px;
+	padding: 20px 20px 20px 20px;
 	-webkit-box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.4), 0px 0px 15px rgba(204, 204, 204, 0.5);
 	-moz-box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.4), 0px 0px 15px rgba(204, 204, 204, 0.5);
 	box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.4), 0px 0px 15px rgba(204, 204, 204, 0.5);
@@ -439,7 +463,7 @@ hr {
  */
  
 #menu {
-	margin: 0 0 60px 20px;
+	margin: 0 0 0px 0px;
 }
 
 #menu ul {
@@ -507,7 +531,26 @@ legend {
 	/*-moz-transition: all 100ms linear;*/
 	transition: all 100ms linear;
 }
-
+.butn {
+	background: #fa4fab; /* Fallback */
+	background: -moz-linear-gradient(top, #fa4fab 0%, #f7387c 100%); /* FF 3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fa4fab), color-stop(100%,#f7387c)); /* Chrome, Safari 4+ */
+	background: -webkit-linear-gradient(top, #fa4fab 0%,#f7387c 100%); /* Chrome 10+, Safari 5.1+ */
+	background: -o-linear-gradient(top, #fa4fab 0%,#f7387c 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #fa4fab 0%,#f7387c 100%); /* IE10+ */
+	background: linear-gradient(top, #fa4fab 0%,#f7387c 100%); /* W3C */
+	height: 75px;
+	width :150px;
+	color: #fff;
+	border-color: transparent;
+	border-radius: 10px 0 10px 0;
+	font-weight: bold;
+	padding: 14px 20px;
+	text-shadow: 0 1px 0 #AC0649;
+	-webkit-transition: all 100ms linear;
+	/*-moz-transition: all 100ms linear;*/
+	transition: all 100ms linear;
+}
 #menu .current > a:hover,
 .btn:hover,
 .more-link:hover,
