--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@ hr {
 /**
  * Content
  */
-#chatitem,#chatinit {
+#chatitem,#chatinit,#time {
   visibility:hidden;
   position:absolute;
   top:50%;
